# pydantic_pandera

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
contrato_de_dados/: index.html
docs/: contrato_de_dados.md  index.md
search/: search_index.json
site/: index.html
site/search/: search_index.json
src/: schema_pandera.py  teste_pydantic.ipynb
